GS-10198 School Finder Preview widget is enormous prior to resizing on IE7 only - fixed.

--- a/src/webapp/res/css/widget/customizeSchoolSearchWidget.css
+++ b/src/webapp/res/css/widget/customizeSchoolSearchWidget.css
@@ -205,6 +205,7 @@ form.customize {
 td.rightSide div.wrapper {
     left:519px;
     position:absolute;
+    width:298px;
 }
 
 td.rightSide div.preview {
